<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_edit_frields"
        android:title="@string/action_edit_friends"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_camera"
        android:title="@string/action_camera"
        android:icon="@drawable/ic_menu_camera"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_message"
        android:title="@string/action_message"
        android:icon="@drawable/ic_menu_message"
        android:orderInCategory="100" app:showAsAction="always" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
